Generate images during the training

--- a/model.ipynb
+++ b/model.ipynb
@@ -35,6 +35,7 @@
     "except:\n",
     "    print(\"Not running on Google Colab\")\n",
     "    onColab = False\n",
+    "    ROOT_PATH = './'\n",
     "\n",
     "from images import show_grid\n",
     "from model import Model, PositionalEmbedding\n",
@@ -63,7 +64,7 @@
     "SAVE_EVERY = 10\n",
     "EXPERIMENT_NAME = 'hands32x32'\n",
     "\n",
-    "if not onColab:\n",
+    "if device == 'cpu':\n",
     "    NB_EPOCHS = 3"
    ]
   },
@@ -74,10 +75,7 @@
    "outputs": [],
    "source": [
     "# Create the output folder\n",
-    "if onColab:\n",
-    "    OUTPUT_PATH = ROOT_PATH + f'output/{EXPERIMENT_NAME}/'\n",
-    "else:\n",
-    "    OUTPUT_PATH = f'output/{EXPERIMENT_NAME}/'\n",
+    "OUTPUT_PATH = ROOT_PATH + f'output/{EXPERIMENT_NAME}/'\n",
     "os.system(f'mkdir -p {OUTPUT_PATH}')"
    ]
   },
@@ -99,7 +97,7 @@
     "elif DATASET in ['hands32x32', 'hands64x64', 'hands128x128']:\n",
     "    s = int(DATASET.split('x')[1])\n",
     "\n",
-    "    if onColab:\n",
+    "    if os.path.isfile(ROOT_PATH + f'data/hands/{str(s)}x{str(s)}.npy'):\n",
     "        real_images = np.load(ROOT_PATH + f'data/hands/{str(s)}x{str(s)}.npy')\n",
     "    else:\n",
     "        folder = f'data/hands/{str(s)}x{str(s)}/'\n",
@@ -274,12 +272,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def generate_image():\n",
+    "    model.eval()\n",
+    "\n",
+    "    img = torch.normal(mean=torch.zeros(1, 3, 32, 32), std=torch.ones(1, 3, 32, 32)).to(device)\n",
+    "\n",
+    "    hist = [] # The tensors are on the CPU\n",
+    "\n",
+    "    for k in tqdm(range(NB_STEPS-1, -1, -1)):\n",
+    "        with torch.no_grad():\n",
+    "            #pred = model(img, pos_emb[k:k+1, :])\n",
+    "            pred = 0.98 * img\n",
+    "\n",
+    "        alpha = 1\n",
+    "        for i in range(k+1):\n",
+    "            alpha *= (1 - get_beta(i))\n",
+    "        \n",
+    "        noise = torch.normal(mean=torch.zeros(1, 3, 32, 32), std=torch.ones(1, 3, 32, 32)).to(device)\n",
+    "\n",
+    "        img = (img - get_beta(k) / math.sqrt(1 - alpha) * pred) / math.sqrt(1 - get_beta(k)) + \\\n",
+    "            math.sqrt(get_beta(k)) * noise\n",
+    "\n",
+    "        if k % ((NB_STEPS+1) // 40) == 0:\n",
+    "            hist.append(img.detach().cpu())\n",
+    "\n",
+    "    return hist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model.train()\n",
     "\n",
     "loss_hist, lr_hist = [], []\n",
     "scaler = torch.cuda.amp.GradScaler()\n",
     "\n",
     "for epoch in (pbar := tqdm(range(NB_EPOCHS))):\n",
+    "    epoch_str = str(epoch).zfill(5)\n",
+    "\n",
     "    lr = optimizer.param_groups[0]['lr']\n",
     "    lr_hist.append(lr)\n",
     "    pbar.set_description(f\"lr = {lr}\")\n",
@@ -321,7 +354,22 @@
     "    loss_hist.append(sum_loss)\n",
     "\n",
     "    if epoch % SAVE_EVERY == SAVE_EVERY - 1:\n",
-    "        torch.save(model.state_dict(), OUTPUT_PATH + str(epoch).zfill(5))\n",
+    "        # Create an output folder\n",
+    "        os.system(f'mkdir -p {OUTPUT_PATH}{epoch_str}')\n",
+    "\n",
+    "        # Save the model\n",
+    "        torch.save(model.state_dict(), OUTPUT_PATH + epoch_str + '/model')\n",
+    "\n",
+    "        # Generate a few images\n",
+    "        generated_images = []\n",
+    "\n",
+    "        for i in range(12):\n",
+    "            hist = generate_image()\n",
+    "            show_grid(np.array([img.numpy().squeeze(0) for img in hist]), 10, f'{OUTPUT_PATH}{epoch_str}/hist-' + str(i).zfill(2))\n",
+    "            np.save(f'{OUTPUT_PATH}{epoch_str}/{str(i).zfill(2)}.npy', hist[-1])\n",
+    "            generated_images.append(hist[-1])\n",
+    "\n",
+    "        show_grid(np.array([img.numpy().squeeze(0) for img in generated_images]), 4, f'{OUTPUT_PATH}{epoch_str}/all')\n",
     "\n",
     "        with open(OUTPUT_PATH + 'metrics', 'w') as f:\n",
     "            f.write(str(loss_hist) + '\\n')\n",
@@ -354,41 +402,6 @@
    "outputs": [],
    "source": [
     "# model.load_state_dict(torch.load(\"00079\", map_location=torch.device('cpu')))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_image(output_file = None):\n",
-    "    model.eval()\n",
-    "\n",
-    "    img = torch.normal(mean=torch.zeros(1, 3, 32, 32), std=torch.ones(1, 3, 32, 32)).to(device)\n",
-    "\n",
-    "    hist = [] # The tensors are on the CPU\n",
-    "\n",
-    "    for k in tqdm(range(NB_STEPS-1, -1, -1)):\n",
-    "        with torch.no_grad():\n",
-    "            pred = model(img, pos_emb[k:k+1, :])\n",
-    "\n",
-    "        alpha = 1\n",
-    "        for i in range(k+1):\n",
-    "            alpha *= (1 - get_beta(i))\n",
-    "        \n",
-    "        noise = torch.normal(mean=torch.zeros(1, 3, 32, 32), std=torch.ones(1, 3, 32, 32)).to(device)\n",
-    "\n",
-    "        img = (img - get_beta(k) / math.sqrt(1 - alpha) * pred) / math.sqrt(1 - get_beta(k)) + \\\n",
-    "            math.sqrt(get_beta(k)) * noise\n",
-    "\n",
-    "        if k % ((NB_STEPS+1) // 40) == 0:\n",
-    "            hist.append(img.detach().cpu())\n",
-    "\n",
-    "    show_grid(np.array([img.numpy().squeeze(0) for img in hist]), output_file)\n",
-    "\n",
-    "for i in range(10):\n",
-    "    generate_image('results/' + str(i).zfill(3))"
    ]
   }
  ],
