--- a/model.ipynb
+++ b/model.ipynb
@@ -281,8 +281,7 @@
     "\n",
     "    for k in tqdm(range(NB_STEPS-1, -1, -1)):\n",
     "        with torch.no_grad():\n",
-    "            #pred = model(img, pos_emb[k:k+1, :])\n",
-    "            pred = 0.98 * img\n",
+    "            pred = model(img, pos_emb[k:k+1, :])\n",
     "\n",
     "        alpha = 1\n",
     "        for i in range(k+1):\n",
