--- a/model.ipynb
+++ b/model.ipynb
@@ -124,7 +124,7 @@
    "outputs": [],
    "source": [
     "# Allow testing without GPU\n",
-    "if not onColab:\n",
+    "if device == 'cpu':\n",
     "    real_images = real_images[:2]\n",
     "\n",
     "# Data augmentation: rotate and flip the images\n",
@@ -263,7 +263,7 @@
     "loss_fn = nn.MSELoss()\n",
     "\n",
     "# pin_memory improves performance on GPU\n",
-    "data_loader = torch.utils.data.DataLoader(real_images, batch_size=BATCH_SIZE, shuffle=True, pin_memory=True)"
+    "data_loader = torch.utils.data.DataLoader(real_images, batch_size=BATCH_SIZE, shuffle=True, pin_memory=True, num_workers=2)"
    ]
   },
   {
