Improve data augmentation

--- a/model.ipynb
+++ b/model.ipynb
@@ -11,6 +11,7 @@
     "\n",
     "import torch\n",
     "import torchvision\n",
+    "from torchvision.transforms import v2 as transforms\n",
     "from torch import nn\n",
     "from tqdm import tqdm\n",
     "\n",
@@ -58,13 +59,13 @@
     "\n",
     "NB_EPOCHS = {\n",
     "    'cifar10': 1000,\n",
-    "    'hands32x32': 50,\n",
+    "    'hands32x32': 1000,\n",
     "}[DATASET]\n",
     "\n",
     "SAVE_EVERY = 10\n",
     "EXPERIMENT_NAME = 'hands32x32'\n",
     "\n",
-    "if device == 'cpu':\n",
+    "if str(device) == 'cpu':\n",
     "    NB_EPOCHS = 3"
    ]
   },
@@ -124,25 +125,8 @@
    "outputs": [],
    "source": [
     "# Allow testing without GPU\n",
-    "if device == 'cpu':\n",
+    "if str(device) == 'cpu':\n",
     "    real_images = real_images[:2]\n",
-    "\n",
-    "# Data augmentation: rotate and flip the images\n",
-    "rotated = []\n",
-    "for img in real_images:\n",
-    "    rotated.append(img)\n",
-    "    rotated.append(np.rot90(img, 1, (0, 1)))\n",
-    "    rotated.append(np.rot90(img, 2, (0, 1)))\n",
-    "    rotated.append(np.rot90(img, 3, (0, 1)))\n",
-    "\n",
-    "    img = np.fliplr(img)\n",
-    "\n",
-    "    rotated.append(img)\n",
-    "    rotated.append(np.rot90(img, 1, (0, 1)))\n",
-    "    rotated.append(np.rot90(img, 2, (0, 1)))\n",
-    "    rotated.append(np.rot90(img, 3, (0, 1)))\n",
-    "\n",
-    "real_images = rotated\n",
     "\n",
     "# Use floats\n",
     "real_images = np.array(real_images, dtype=np.float32)\n",
@@ -304,6 +288,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data augmentation\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.RandomRotation(180, fill=1),\n",
+    "    transforms.RandomHorizontalFlip()\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model.train()\n",
     "\n",
     "loss_hist, lr_hist = [], []\n",
@@ -320,6 +317,8 @@
     "\n",
     "    for batch, images in enumerate(data_loader):\n",
     "        images = images.to(device)\n",
+    "\n",
+    "        images = transform(images)\n",
     "\n",
     "        # Generate noisy images\n",
     "        err = torch.normal(mean=torch.zeros(images.shape), std=torch.ones(images.shape)).to(device)\n",
