--- a/model.ipynb
+++ b/model.ipynb
@@ -256,14 +256,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_image():\n",
+    "def generate_image(keep_hist = False):\n",
     "    model.eval()\n",
     "\n",
     "    img = torch.normal(mean=torch.zeros(1, 3, 32, 32), std=torch.ones(1, 3, 32, 32)).to(device)\n",
     "\n",
-    "    hist = [] # The tensors are on the CPU\n",
+    "    if keep_hist:\n",
+    "        hist = [] # The tensors are on the CPU\n",
     "\n",
-    "    for k in tqdm(range(NB_STEPS-1, -1, -1)):\n",
+    "    for k in range(NB_STEPS-1, -1, -1):\n",
     "        with torch.no_grad():\n",
     "            pred = model(img, pos_emb[k:k+1, :])\n",
     "\n",
@@ -276,10 +277,12 @@
     "        img = (img - get_beta(k) / math.sqrt(1 - alpha) * pred) / math.sqrt(1 - get_beta(k)) + \\\n",
     "            math.sqrt(get_beta(k)) * noise\n",
     "\n",
-    "        if k % ((NB_STEPS+1) // 40) == 0:\n",
+    "        if k % ((NB_STEPS+1) // 40) == 0 and keep_hist:\n",
     "            hist.append(img.detach().cpu())\n",
     "\n",
-    "    return hist"
+    "    if keep_hist:\n",
+    "        return hist\n",
+    "    return img.cpu()"
    ]
   },
   {
@@ -351,24 +354,24 @@
     "    scheduler.step(sum_loss)\n",
     "    loss_hist.append(sum_loss)\n",
     "\n",
+    "    # Create an output folder\\n\",\n",
+    "    os.system(f'mkdir -p {OUTPUT_PATH}{epoch_str}')\n",
+    "\n",
+    "    # Generate a few images\n",
+    "    generated_images = []\n",
+    "\n",
+    "    for i in range(12):\n",
+    "        img = generate_image()\n",
+    "        np.save(f'{OUTPUT_PATH}{epoch_str}/{str(i).zfill(2)}.npy', img)\n",
+    "        generated_images.append(img)\n",
+    "\n",
+    "    show_grid(torch.cat(generated_images).numpy(), 4, f'{OUTPUT_PATH}all-{epoch_str}/')\n",
+    "\n",
     "    if epoch % SAVE_EVERY == SAVE_EVERY - 1:\n",
-    "        # Create an output folder\n",
-    "        os.system(f'mkdir -p {OUTPUT_PATH}{epoch_str}')\n",
-    "\n",
     "        # Save the model\n",
-    "        torch.save(model.state_dict(), OUTPUT_PATH + epoch_str + '/model')\n",
+    "        torch.save(model.state_dict(),  f'{OUTPUT_PATH}model-{epoch_str}')\n",
     "\n",
-    "        # Generate a few images\n",
-    "        generated_images = []\n",
-    "\n",
-    "        for i in range(12):\n",
-    "            hist = generate_image()\n",
-    "            show_grid(np.array([img.numpy().squeeze(0) for img in hist]), 10, f'{OUTPUT_PATH}{epoch_str}/hist-' + str(i).zfill(2))\n",
-    "            np.save(f'{OUTPUT_PATH}{epoch_str}/{str(i).zfill(2)}.npy', hist[-1])\n",
-    "            generated_images.append(hist[-1])\n",
-    "\n",
-    "        show_grid(np.array([img.numpy().squeeze(0) for img in generated_images]), 4, f'{OUTPUT_PATH}{epoch_str}/all')\n",
-    "\n",
+    "        # Save the metrics\n",
     "        with open(OUTPUT_PATH + 'metrics', 'w') as f:\n",
     "            f.write(str(loss_hist) + '\\n')\n",
     "            f.write(str(lr_hist) + '\\n')"
