--- a/model.ipynb
+++ b/model.ipynb
@@ -265,7 +265,7 @@
     "        hist = [] # The tensors are on the CPU\n",
     "\n",
     "    for k in range(NB_STEPS-1, -1, -1):\n",
-    "        with torch.no_grad():\n",
+    "        with torch.no_grad() and torch.autocast(device_type='cuda', dtype=torch.float16):\n",
     "            pred = model(img, pos_emb[k:k+1, :])\n",
     "\n",
     "        alpha = 1\n",
@@ -282,7 +282,7 @@
     "\n",
     "    if keep_hist:\n",
     "        return hist\n",
-    "    return img.cpu()"
+    "    return img.detach().cpu()"
    ]
   },
   {
