--- a/model.ipynb
+++ b/model.ipynb
@@ -365,7 +365,7 @@
     "        np.save(f'{OUTPUT_PATH}{epoch_str}/{str(i).zfill(2)}.npy', img)\n",
     "        generated_images.append(img)\n",
     "\n",
-    "    show_grid(torch.cat(generated_images).numpy(), 4, f'{OUTPUT_PATH}all-{epoch_str}/')\n",
+    "    show_grid(torch.cat(generated_images).numpy(), 4, f'{OUTPUT_PATH}all-{epoch_str}.png')\n",
     "\n",
     "    if epoch % SAVE_EVERY == SAVE_EVERY - 1:\n",
     "        # Save the model\n",
