--- a/model.ipynb
+++ b/model.ipynb
@@ -23,6 +23,7 @@
     "import math\n",
     "import sys\n",
     "import os\n",
+    "import time\n",
     "\n",
     "# Mount Google Drive if executed on Google Colab\n",
     "try:\n",
@@ -314,16 +315,21 @@
     "\n",
     "    lr = optimizer.param_groups[0]['lr']\n",
     "    lr_hist.append(lr)\n",
-    "    pbar.set_description(f\"lr = {lr}\")\n",
     "\n",
     "    sum_loss = 0\n",
+    "\n",
+    "    time_da, time_gen, time_train, time_eval = 0, 0, 0, 0\n",
     "\n",
     "    for batch, images in enumerate(data_loader):\n",
     "        images = images.to(device)\n",
     "\n",
+    "        begin = time.time()\n",
     "        images = transform(images)\n",
+    "        time_da += time.time() - begin\n",
     "\n",
     "        # Generate noisy images\n",
+    "        begin = time.time()\n",
+    "\n",
     "        err = torch.normal(mean=torch.zeros(images.shape), std=torch.ones(images.shape)).to(device)\n",
     "\n",
     "        steps = torch.randint(0, NB_STEPS, size=(len(images), 1, 1, 1))\n",
@@ -336,7 +342,11 @@
     "\n",
     "        noisy_images = torch.sqrt(alphas) * images + torch.sqrt(1 - alphas) * err\n",
     "\n",
+    "        time_gen += time.time() - begin\n",
+    "\n",
     "        # Train the model on them\n",
+    "        begin = time.time()\n",
+    "\n",
     "        optimizer.zero_grad(set_to_none=True)\n",
     "\n",
     "        with torch.autocast(device_type='cuda', dtype=torch.float16):\n",
@@ -348,6 +358,8 @@
     "        scaler.step(optimizer)\n",
     "        scaler.update()\n",
     "\n",
+    "        time_train += time.time() - begin\n",
+    "\n",
     "        del images, err, steps, alphas, noisy_images\n",
     "\n",
     "    # Reduce the learning rate if needed\n",
@@ -358,6 +370,8 @@
     "    os.system(f'mkdir -p {OUTPUT_PATH}{epoch_str}')\n",
     "\n",
     "    # Generate a few images\n",
+    "    begin = time.time()\n",
+    "\n",
     "    generated_images = []\n",
     "\n",
     "    for i in range(12):\n",
@@ -367,6 +381,8 @@
     "\n",
     "    show_grid(torch.cat(generated_images).numpy(), 4, f'{OUTPUT_PATH}all-{epoch_str}.png')\n",
     "\n",
+    "    time_eval += time.time() - begin\n",
+    "\n",
     "    if epoch % SAVE_EVERY == SAVE_EVERY - 1:\n",
     "        # Save the model\n",
     "        torch.save(model.state_dict(),  f'{OUTPUT_PATH}model-{epoch_str}')\n",
@@ -374,7 +390,11 @@
     "        # Save the metrics\n",
     "        with open(OUTPUT_PATH + 'metrics', 'w') as f:\n",
     "            f.write(str(loss_hist) + '\\n')\n",
-    "            f.write(str(lr_hist) + '\\n')"
+    "            f.write(str(lr_hist) + '\\n')\n",
+    "\n",
+    "    total = time_da + time_gen + time_train + time_eval\n",
+    "\n",
+    "    pbar.set_description(f\"lr = {lr}, time: da = {time_da / total:.2f}, gen = {time_gen / total:.2f}, train = {time_train / total:.2f}, eval = {time_eval / total:.2f}\")"
    ]
   },
   {
