Generate fewer images

--- a/model.ipynb
+++ b/model.ipynb
@@ -318,7 +318,7 @@
     "\n",
     "    sum_loss = 0\n",
     "\n",
-    "    time_da, time_gen, time_train, time_eval = 0, 0, 0, 0\n",
+    "    time_da, time_gen, time_train = 0, 0, 0\n",
     "\n",
     "    for batch, images in enumerate(data_loader):\n",
     "        images = images.to(device)\n",
@@ -369,20 +369,6 @@
     "    # Create an output folder\\n\",\n",
     "    os.system(f'mkdir -p {OUTPUT_PATH}{epoch_str}')\n",
     "\n",
-    "    # Generate a few images\n",
-    "    begin = time.time()\n",
-    "\n",
-    "    generated_images = []\n",
-    "\n",
-    "    for i in range(12):\n",
-    "        img = generate_image()\n",
-    "        np.save(f'{OUTPUT_PATH}{epoch_str}/{str(i).zfill(2)}.npy', img)\n",
-    "        generated_images.append(img)\n",
-    "\n",
-    "    show_grid(torch.cat(generated_images).numpy(), 4, f'{OUTPUT_PATH}all-{epoch_str}.png')\n",
-    "\n",
-    "    time_eval += time.time() - begin\n",
-    "\n",
     "    if epoch % SAVE_EVERY == SAVE_EVERY - 1:\n",
     "        # Save the model\n",
     "        torch.save(model.state_dict(),  f'{OUTPUT_PATH}model-{epoch_str}')\n",
@@ -391,10 +377,20 @@
     "        with open(OUTPUT_PATH + 'metrics', 'w') as f:\n",
     "            f.write(str(loss_hist) + '\\n')\n",
     "            f.write(str(lr_hist) + '\\n')\n",
+    "        \n",
+    "        # Generate a few images\n",
+    "        generated_images = []\n",
     "\n",
-    "    total = time_da + time_gen + time_train + time_eval\n",
+    "        for i in range(6):\n",
+    "            img = generate_image()\n",
+    "            np.save(f'{OUTPUT_PATH}{epoch_str}/{str(i).zfill(2)}.npy', img)\n",
+    "            generated_images.append(img)\n",
     "\n",
-    "    pbar.set_description(f\"lr = {lr}, time: da = {time_da / total:.2f}, gen = {time_gen / total:.2f}, train = {time_train / total:.2f}, eval = {time_eval / total:.2f}\")"
+    "        show_grid(torch.cat(generated_images).numpy(), 3, f'{OUTPUT_PATH}all-{epoch_str}.png')\n",
+    "\n",
+    "    total = time_da + time_gen + time_train\n",
+    "\n",
+    "    pbar.set_description(f\"lr = {lr}, time: da = {time_da / total:.2f}, gen = {time_gen / total:.2f}, train = {time_train / total:.2f}\")"
    ]
   },
   {
