--- a/model.ipynb
+++ b/model.ipynb
@@ -61,10 +61,12 @@
     "NB_EPOCHS = {\n",
     "    'cifar10': 1000,\n",
     "    'hands32x32': 1000,\n",
+    "    'hands64x64': 1000,\n",
+    "    'hands128x128': 1000,\n",
     "}[DATASET]\n",
     "\n",
     "SAVE_EVERY = 10\n",
-    "EXPERIMENT_NAME = 'hands32x32'\n",
+    "EXPERIMENT_NAME = f'{DATASET}'\n",
     "\n",
     "if str(device) == 'cpu':\n",
     "    NB_EPOCHS = 3"
@@ -367,7 +369,7 @@
     "    loss_hist.append(sum_loss)\n",
     "\n",
     "    if epoch % SAVE_EVERY == SAVE_EVERY - 1:\n",
-    "        # Create an output folder\\n\",\n",
+    "        # Create an output folder\n",
     "        os.system(f'mkdir -p {OUTPUT_PATH}{epoch_str}')\n",
     "\n",
     "        # Save the model\n",
