--- a/model.ipynb
+++ b/model.ipynb
@@ -65,8 +65,10 @@
     "    'hands128x128': 1000,\n",
     "}[DATASET]\n",
     "\n",
+    "WITH_ROTATIONS = False\n",
+    "\n",
     "SAVE_EVERY = 10\n",
-    "EXPERIMENT_NAME = f'{DATASET}'\n",
+    "EXPERIMENT_NAME = f\"{DATASET}-{'with' if WITH_ROTATIONS else 'without'}_rotations\"\n",
     "\n",
     "if str(device) == 'cpu':\n",
     "    NB_EPOCHS = 3"
@@ -296,7 +298,7 @@
    "source": [
     "# Data augmentation\n",
     "transform = transforms.Compose([\n",
-    "    transforms.RandomRotation(180, fill=1),\n",
+    "    transforms.RandomRotation(180, fill=1) if WITH_ROTATIONS else transforms.Identity(),\n",
     "    transforms.RandomHorizontalFlip()\n",
     "])"
    ]
