--- a/model.ipynb
+++ b/model.ipynb
@@ -248,7 +248,7 @@
     "model = Model(32).to(device)\n",
     "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
-    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, 'min', factor=0.5, patience=4, min_lr=1e-6)\n",
+    "#scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, 'min', factor=0.5, patience=4, min_lr=1e-6)\n",
     "loss_fn = nn.MSELoss()\n",
     "\n",
     "# pin_memory improves performance on GPU\n",
@@ -299,7 +299,7 @@
     "# Data augmentation\n",
     "transform = transforms.Compose([\n",
     "    transforms.RandomRotation(180, fill=1) if WITH_ROTATIONS else transforms.Identity(),\n",
-    "    transforms.RandomHorizontalFlip()\n",
+    "    transforms.RandomVerticalFlip()\n",
     "])"
    ]
   },
@@ -367,7 +367,7 @@
     "        del images, err, steps, alphas, noisy_images\n",
     "\n",
     "    # Reduce the learning rate if needed\n",
-    "    scheduler.step(sum_loss)\n",
+    "    #scheduler.step(sum_loss)\n",
     "    loss_hist.append(sum_loss)\n",
     "\n",
     "    if epoch % SAVE_EVERY == SAVE_EVERY - 1:\n",
