Fix size and bug

--- a/model.ipynb
+++ b/model.ipynb
@@ -65,6 +65,13 @@
     "    'hands128x128': 1000,\n",
     "}[DATASET]\n",
     "\n",
+    "SIZE = {\n",
+    "    'cifar10': 32,\n",
+    "    'hands32x32': 32,\n",
+    "    'hands64x64': 64,\n",
+    "    'hands128x128': 128,\n",
+    "}[DATASET]\n",
+    "\n",
     "WITH_ROTATIONS = False\n",
     "\n",
     "SAVE_EVERY = 10\n",
@@ -245,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Model(32).to(device)\n",
+    "model = Model(SIZE).to(device)\n",
     "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
     "#scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, 'min', factor=0.5, patience=4, min_lr=1e-6)\n",
@@ -264,20 +271,21 @@
     "def generate_image(keep_hist = False):\n",
     "    model.eval()\n",
     "\n",
-    "    img = torch.normal(mean=torch.zeros(1, 3, 32, 32), std=torch.ones(1, 3, 32, 32)).to(device)\n",
+    "    img = torch.normal(mean=torch.zeros(1, 3, SIZE, SIZE), std=torch.ones(1, 3, SIZE, SIZE)).to(device)\n",
     "\n",
     "    if keep_hist:\n",
     "        hist = [] # The tensors are on the CPU\n",
     "\n",
     "    for k in range(NB_STEPS-1, -1, -1):\n",
-    "        with torch.no_grad() and torch.autocast(device_type='cuda', dtype=torch.float16):\n",
-    "            pred = model(img, pos_emb[k:k+1, :])\n",
+    "        with torch.no_grad():\n",
+    "            with torch.autocast(device_type='cuda', dtype=torch.float16):\n",
+    "                pred = model(img, pos_emb[k:k+1, :])\n",
     "\n",
     "        alpha = 1\n",
     "        for i in range(k+1):\n",
     "            alpha *= (1 - get_beta(i))\n",
     "        \n",
-    "        noise = torch.normal(mean=torch.zeros(1, 3, 32, 32), std=torch.ones(1, 3, 32, 32)).to(device)\n",
+    "        noise = torch.normal(mean=torch.zeros(1, 3, SIZE, SIZE), std=torch.ones(1, 3, SIZE, SIZE)).to(device)\n",
     "\n",
     "        img = (img - get_beta(k) / math.sqrt(1 - alpha) * pred) / math.sqrt(1 - get_beta(k)) + \\\n",
     "            math.sqrt(get_beta(k)) * noise\n",
