--- a/model.ipynb
+++ b/model.ipynb
@@ -75,7 +75,7 @@
     "WITH_ROTATIONS = False\n",
     "\n",
     "SAVE_EVERY = 10\n",
-    "EXPERIMENT_NAME = f\"{DATASET}-{'with' if WITH_ROTATIONS else 'without'}_rotations\"\n",
+    "EXPERIMENT_NAME = f\"{DATASET},rotations={'on' if WITH_ROTATIONS else 'off'}{',cpu' if str(device) == 'cpu' else ''}\"\n",
     "\n",
     "if str(device) == 'cpu':\n",
     "    NB_EPOCHS = 3"
@@ -430,7 +430,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model.load_state_dict(torch.load(\"00079\", map_location=torch.device('cpu')))"
+    "# model.load_state_dict(torch.load(\"./output/hands64x64-without_rotations/model-00399\", map_location=torch.device('cpu')))"
    ]
   }
  ],
