Learning rate scheduler

--- a/model.ipynb
+++ b/model.ipynb
@@ -60,7 +60,7 @@
     "    'cifar10': 1000,\n",
     "    'hands32x32': 1000,\n",
     "    'hands64x64': 1000,\n",
-    "    'hands128x128': 1000,\n",
+    "    'hands128x128': 600,\n",
     "}[DATASET]\n",
     "\n",
     "SIZE = {\n",
@@ -253,7 +253,7 @@
     "model = Model(SIZE).to(device)\n",
     "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
-    "#scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, 'min', factor=0.5, patience=4, min_lr=1e-6)\n",
+    "scheduler = torch.optim.lr_scheduler.MultiStepLR(optimizer, milestones=[400, 500], gamma=0.3)\n",
     "loss_fn = nn.MSELoss()\n",
     "\n",
     "# pin_memory improves performance on GPU\n",
@@ -373,7 +373,7 @@
     "        del images, err, steps, alphas, noisy_images\n",
     "\n",
     "    # Reduce the learning rate if needed\n",
-    "    #scheduler.step(sum_loss)\n",
+    "    scheduler.step(sum_loss)\n",
     "    loss_hist.append(sum_loss)\n",
     "\n",
     "    if epoch % SAVE_EVERY == SAVE_EVERY - 1:\n",
