Update lr scheduler

--- a/model.ipynb
+++ b/model.ipynb
@@ -253,7 +253,7 @@
     "model = Model(SIZE).to(device)\n",
     "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
-    "scheduler = torch.optim.lr_scheduler.MultiStepLR(optimizer, milestones=[400, 500], gamma=0.3)\n",
+    "scheduler = torch.optim.lr_scheduler.MultiStepLR(optimizer, milestones=[400], gamma=0.1)\n",
     "loss_fn = nn.MSELoss()\n",
     "\n",
     "# pin_memory improves performance on GPU\n",
