--- a/model.ipynb
+++ b/model.ipynb
@@ -329,13 +329,11 @@
     "    sum_loss = 0\n",
     "\n",
     "    time_da, time_gen, time_train = 0, 0, 0\n",
+    "    begin_epoch = time.time()\n",
     "\n",
     "    for batch, images in enumerate(data_loader):\n",
     "        images = images.to(device)\n",
-    "\n",
-    "        begin = time.time()\n",
     "        images = transform(images)\n",
-    "        time_da += time.time() - begin\n",
     "\n",
     "        # Generate noisy images\n",
     "        begin = time.time()\n",
@@ -376,6 +374,9 @@
     "    scheduler.step(sum_loss)\n",
     "    loss_hist.append(sum_loss)\n",
     "\n",
+    "    total = begin_epoch - time.time()\n",
+    "    pbar.set_description(f\"lr = {lr}, time: gen = {time_gen / total:.2f}, train = {time_train / total:.2f}\")\n",
+    "\n",
     "    if epoch % SAVE_EVERY == SAVE_EVERY - 1:\n",
     "        # Create an output folder\n",
     "        os.system(f'mkdir -p {OUTPUT_PATH}{epoch_str}')\n",
@@ -396,11 +397,7 @@
     "            np.save(f'{OUTPUT_PATH}{epoch_str}/{str(i).zfill(2)}.npy', img)\n",
     "            generated_images.append(img)\n",
     "\n",
-    "        show_grid(torch.cat(generated_images).numpy(), 3, f'{OUTPUT_PATH}all-{epoch_str}.png')\n",
-    "\n",
-    "    total = time_da + time_gen + time_train\n",
-    "\n",
-    "    pbar.set_description(f\"lr = {lr}, time: da = {time_da / total:.2f}, gen = {time_gen / total:.2f}, train = {time_train / total:.2f}\")"
+    "        show_grid(torch.cat(generated_images).numpy(), 3, f'{OUTPUT_PATH}all-{epoch_str}.png')"
    ]
   },
   {
