--- a/model.ipynb
+++ b/model.ipynb
@@ -374,7 +374,7 @@
     "    scheduler.step(sum_loss)\n",
     "    loss_hist.append(sum_loss)\n",
     "\n",
-    "    total = begin_epoch - time.time()\n",
+    "    total = time.time() - begin_epoch\n",
     "    pbar.set_description(f\"lr = {lr}, time: gen = {time_gen / total:.2f}, train = {time_train / total:.2f}\")\n",
     "\n",
     "    if epoch % SAVE_EVERY == SAVE_EVERY - 1:\n",
