Remove useless parameter

--- a/model.ipynb
+++ b/model.ipynb
@@ -371,7 +371,7 @@
     "        del images, err, steps, alphas, noisy_images\n",
     "\n",
     "    # Reduce the learning rate if needed\n",
-    "    scheduler.step(sum_loss)\n",
+    "    scheduler.step()\n",
     "    loss_hist.append(sum_loss)\n",
     "\n",
     "    total = time.time() - begin_epoch\n",
